--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -39,7 +39,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v3
         with:
-          images: joshuakaisar/
+          images: joshuakaisar/dockerflask
 
       - name: Build and push
         uses: docker/build-push-action@v2
